--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Перевод Яндекс.Денег</string>
     <string name="greeting">Добро пожаловать!</string>
     <string name="about">Приложение позволяет переводить деньги между кошельками в системе Яндекс.Деньги.\nПосле авторизации Вам будет предложено придумать PIN-код, который потребуется вводить при каждом запуске приложения. Это необходимо для обеспечения безопасности вашего кошелька.</string>
+    <string name="no_network_connection">Нет подключения к сети</string>
 </resources>
